[gd_scene load_steps=2 format=3 uid="uid://bu7ipo1ygrg8o"]

[ext_resource type="Script" path="res://Scripts/MonsterPickHandler.gd" id="1_sy2j5"]

[node name="MonsterPick" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sy2j5")

[node name="MonsterPick" type="Window" parent="."]
initial_position = 2
size = Vector2i(153, 100)
wrap_controls = true
unresizable = true
always_on_top = true

[node name="VBoxContainer" type="VBoxContainer" parent="MonsterPick"]
offset_right = 153.0
offset_bottom = 93.0

[node name="Label" type="Label" parent="MonsterPick/VBoxContainer"]
layout_mode = 2
text = "Pick your monster!"

[node name="HBoxContainer" type="HBoxContainer" parent="MonsterPick/VBoxContainer"]
layout_mode = 2

[node name="FireButton" type="Button" parent="MonsterPick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fire"

[node name="WaterButton" type="Button" parent="MonsterPick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Water"

[node name="GrassButton" type="Button" parent="MonsterPick/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Grass"

[node name="TutorialButton" type="Button" parent="MonsterPick/VBoxContainer"]
layout_mode = 2
text = "Type tutorial"

[node name="ConfirmationWindow" type="Window" parent="."]
initial_position = 2
size = Vector2i(295, 100)
visible = false
wrap_controls = true
unresizable = true
always_on_top = true

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationWindow"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ConfirmationLabel" type="Label" parent="ConfirmationWindow/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Are you sure you want to select X type"

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationWindow/VBoxContainer"]
layout_mode = 2

[node name="YesButton" type="Button" parent="ConfirmationWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes"

[node name="NoButton" type="Button" parent="ConfirmationWindow/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "No"

[node name="TutorialWindow" type="Window" parent="."]
initial_position = 2
size = Vector2i(442, 214)
visible = false
wrap_controls = true
unresizable = true
always_on_top = true

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialWindow"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TutorialWindow/VBoxContainer"]
layout_mode = 2
text = "Picking your type is a vital part of your adventure.
Each type has it's effectiveness that you will use in battle.

Below are those type effectiveness:
Fire -> Grass
Water -> Fire
Grass -> Water"

[node name="BackButton" type="Button" parent="TutorialWindow/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MonsterPick/VBoxContainer/HBoxContainer/FireButton" to="." method="ButtonPressed" binds= ["Fire"]]
[connection signal="pressed" from="MonsterPick/VBoxContainer/HBoxContainer/WaterButton" to="." method="ButtonPressed" binds= ["Water"]]
[connection signal="pressed" from="MonsterPick/VBoxContainer/HBoxContainer/GrassButton" to="." method="ButtonPressed" binds= ["Grass"]]
[connection signal="pressed" from="MonsterPick/VBoxContainer/TutorialButton" to="." method="TutorialPressed"]
[connection signal="pressed" from="ConfirmationWindow/VBoxContainer/HBoxContainer/YesButton" to="." method="ConfirmationButton" binds= ["Yes"]]
[connection signal="pressed" from="ConfirmationWindow/VBoxContainer/HBoxContainer/NoButton" to="." method="ConfirmationButton" binds= ["No"]]
[connection signal="pressed" from="TutorialWindow/VBoxContainer/BackButton" to="." method="TutorialBack"]
